<resources>
    <string name="app_name">Shopique</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_to_my_cart">New to Shopique?</string>
    <string name="sign_up">Sign Up</string>
    <string name="err_input_username">Please input username</string>
    <string name="err_input_password">Please input password</string>
    <string name="err_loading_products">Error occurred while loading products</string>
    <string name="err_loading_product_categories">Error occurred while loading product categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_qty">Order Quantity</string>
    <string name="lbl_reviews_count">reviews</string>
    <string name="err_invalid_login_credentials">Sign in credentials are invalid</string>
    <string name="product_details">Product Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_details">Order Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_your_payment_method">Select your Payment Method</string>
    <string name="card_holder_name">Cardholder Name</string>
    <string name="card_no">Card Number</string>
    <string name="exp_date">Expiry Date</string>
    <string name="cvc">CVC</string>
    <string name="pay">Pay</string>
    <string name="checkout">Checkout</string>
    <string name="select_expiry_date">Select Expiry Date</string>
    <string name="you_are_online">You\'re online</string>
    <string name="you_are_offline">You\'re offline. Please connect to the internet</string>
    <string name="err_quantity_cant_be_zero">Quantity can\'t be 0</string>
    <string name="product_qty_updated">Product quantity has been updated in the cart</string>
    <string name="product_added_to_cart">Product has been added to the cart</string>
    <string name="retry">Retry</string>
    <string name="you_have_lost_connection">Seems you have lost network connection</string>
    <string name="err_input_card_holder_name">Please input card holder name</string>
    <string name="err_input_card_number">Please input card number</string>
    <string name="err_set_exp_date">Please set card expiration date</string>
    <string name="err_input_cvc">Please input CVC</string>
    <string name="total_amount">Total Amount : </string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="select_delivery_location">Select Delivery Location</string>
    <string name="search_location">Search Location</string>
    <string name="next">Next</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="use_current_location">Use my current location</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="order_list_is_empty">Orders list is empty</string>
    <string name="pending">Pending</string>
    <string name="placed_date_time">Placed Date/Time</string>
    <string name="order">Order</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="order_items">Order Items</string>
    <string name="received">Received</string>
    <string name="product">Product</string>
    <string name="sub_total">Sub Total</string>
    <string name="qty">Qty</string>
    <string name="cancelled">Cancelled</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="order_marked_as_received">Order has been marked as RECEIVED</string>
    <string name="order_placed_successfully">Order has been placed successfully</string>
    <string name="already_placed_order">You have already placed the order</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="are_you_sure_exit_app">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_app">Exit App</string>
</resources>