<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/delivery_location_activity"
    android:padding="@dimen/default_ui_padding"
    tools:context=".ui.screens.DeliveryLocationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnNext"
        android:clipToPadding="false"
        android:layout_marginBottom="15dp"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_delivery_location"
                android:textColor="@color/default_label_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/search_location"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_grey"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/pick_on_map"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_grey"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/use_current_location"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/favourites"
                android:textColor="@color/default_label_color"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_outline_selected"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_size"
                    app:drawableTopCompat="@drawable/ic_home"
                    app:drawableTint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_outline"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/work"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size"
                    app:drawableTopCompat="@drawable/ic_work" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

</RelativeLayout>