<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/default_ui_padding"
    tools:context=".ui.screens.OrderDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnScanQR"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    tools:text="#123" />

                <TextView
                    android:id="@+id/tvOrderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textAllCaps="true"
                    android:textColor="@color/status_pending"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    tools:text="@string/pending" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/placed_date_time"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/default_label_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="2022-Apr-22 12:45pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/delivery_location"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/default_label_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDelLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="Home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/total_amount"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@color/default_label_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="$210.55" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/order_items"
                android:textColor="@color/default_label_color"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_total"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/default_label_color"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytOrderItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/scan_qr_code" />

</RelativeLayout>