<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg_outline"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/default_label_color"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"
            tools:text="#123456" />

        <TextView
            android:id="@+id/tvOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/status_pending"
            android:textStyle="bold"
            tools:text="@string/pending" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placed_date_time"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1.25"
            android:textColor="@color/default_label_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" : "
            android:textStyle="bold"
            android:textColor="@color/default_label_color" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2022-Apr-22 12:45pm"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/default_label_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_location"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1.25"
            android:textColor="@color/default_label_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" : "
            android:textStyle="bold"
            android:textColor="@color/default_label_color" />

        <TextView
            android:id="@+id/tvDelLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Home"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1"
            android:textColor="@color/default_label_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="@dimen/default_text_size"
            android:layout_weight="1.25"
            android:textColor="@color/default_label_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" : "
            android:textStyle="bold"
            android:textColor="@color/default_label_color" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="$210.55"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/default_label_color" />
    </LinearLayout>
</LinearLayout>